--- a/redone/part3/phonebookBackend/package.json
+++ b/redone/part3/phonebookBackend/package.json
@@ -1,30 +1,32 @@
 {
-    "name": "phonebook_backend",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "dev": "nodemon index.js",
-        "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build:ui": "rm -rf dist && cd ../phonebookFrontend && npm run build && cp -r dist ../phonebookBackend",
-        "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-        "lint": "eslint ."
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@eslint/js": "^9.18.0",
-        "@stylistic/eslint-plugin-js": "^2.13.0",
-        "eslint": "^9.18.0",
-        "globals": "^15.14.0",
-        "nodemon": "^3.1.9"
-    },
-    "dependencies": {
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.7",
-        "express": "^4.21.2",
-        "mongoose": "^8.9.5",
-        "morgan": "^1.10.0"
-    }
+  "name": "phonebook_backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "rm -rf dist && cd ../phonebookFrontend && npm run build && cp -r dist ../phonebookBackend",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "@stylistic/eslint-plugin-js": "^2.13.0",
+    "eslint": "^9.18.0",
+    "globals": "^15.14.0",
+    "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.5",
+    "morgan": "^1.10.0"
+  }
 }
+
